<resources>
    <string name="app_name">Goal counter</string>
    <string name="first_team">First team</string>
    <string name="second_team">Second team</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="presets">Presets</string>
    <string name="goal">GOAL!</string>
    <string name="cancel">Cancel</string>
    <string name="finish_now">Finish now</string>
    <string name="winners">List</string>
    <string name="new_game">New Game</string>
    <string name="goal_counter_by_oleh_zaiets">Goal counter by Oleh Zaiets</string>
    <string name="setting">Setting</string>
    <string name="amount_of_times">Amount of times</string>
    <string name="duration">Duration</string>
    <string name="times">Halfs</string>
    <string name="duration_of_one_time">Minutes in one time</string>
    <string name="winner">WINNER</string>
    <string name="menu">Menu</string>
    <string name="share">Share</string>
    <string name="clear">Clear</string>
    <string name="time_is_over">Time is over</string>
    <string name="time_is_over_message">Times is over. When the break is over, press the button</string>
    <string name="play_button">Here goes!</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Cancel the game?</string>
    <string name="no_button">No</string>
    <string name="yes_button">Yes</string>
    <string name="period">%d half</string>
    <string name="min_length">Min length - 3</string>
    <string name="score">%d:%d</string>
    <string name="winner_list">Winner list</string>
    <string name="go">Go!</string>
    <string name="dead_head">Dead heat</string>
</resources>