<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/cancel"
        android:textSize="@dimen/button_font_size"
        android:textColor="@color/white"
        android:fontFamily="@font/righteous"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:textSize="@dimen/period_font_size"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/tvTimer"
        app:layout_constraintEnd_toEndOf="@id/tvTimer"
        app:layout_constraintTop_toBottomOf="@id/tvTimer"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/timer_style"
        android:inputType="time"
        android:textSize="@dimen/timer_font_size"
        android:textColor="@color/white"
        android:fontFamily="@font/righteous"
        android:padding="@dimen/button_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirstTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_team"
        android:textSize="@dimen/team_font_size"
        android:textColor="@color/white"
        android:fontFamily="@font/righteous"
        app:layout_constraintStart_toStartOf="@+id/ivWinner"
        app:layout_constraintBottom_toTopOf="@id/ivWinner"
        app:layout_constraintEnd_toEndOf="@id/ivWinner"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSecondTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_team"
        android:textSize="@dimen/team_font_size"
        android:textColor="@color/white"
        android:fontFamily="@font/righteous"
        app:layout_constraintEnd_toEndOf="@id/ivLoser"
        app:layout_constraintBottom_toTopOf="@id/ivLoser"
        app:layout_constraintStart_toStartOf="@id/ivLoser"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ic_playerw"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintBottom_toBottomOf="@id/tvScore"
        app:layout_constraintTop_toTopOf="@id/tvScore"
        app:layout_constraintEnd_toStartOf="@id/tvScore"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/score_font_size_two"
        android:textColor="@color/white"
        android:fontFamily="@font/righteous"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLoser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ic_playerl"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintBottom_toBottomOf="@id/tvScore"
        app:layout_constraintTop_toTopOf="@id/tvScore"
        app:layout_constraintStart_toEndOf="@id/tvScore"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoalFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/goal"
        android:textSize="@dimen/team_font_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@color/white"
        android:fontFamily="@font/righteous"
        app:layout_constraintLeft_toLeftOf="@id/ivWinner"
        app:layout_constraintEnd_toEndOf="@id/ivWinner"
        app:layout_constraintTop_toBottomOf="@id/ivWinner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoalSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style_disabled"
        android:text="@string/goal"
        android:textSize="@dimen/team_font_size"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@color/white"
        android:fontFamily="@font/righteous"
        app:layout_constraintStart_toStartOf="@id/ivLoser"
        app:layout_constraintEnd_toEndOf="@id/ivLoser"
        app:layout_constraintTop_toBottomOf="@id/ivLoser"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/finish_now"
        android:textSize="@dimen/button_font_size"
        android:textColor="@color/white"
        android:fontFamily="@font/righteous"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/button_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>